--- a/Main/index.html
+++ b/Main/index.html
@@ -1,93 +1,25 @@
 <!doctype html>
-<html class="no-js" lang="en">
+<html>
 
 <head>
     <meta charset="utf-8" />
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Foundation Starter Template</title>
-    <!-- Compressed CSS -->
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation.min.css"
-        integrity="sha256-ogmFxjqiTMnZhxCqVmcqTvjfe1Y/ec4WaRj/aQPvn+I=" crossorigin="anonymous">
+    <title>Take A Hike</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href="./css/materialize/css/materialize.css"  media="screen,projection"/>
+    <link rel ="stylesheet" href="css/style.css" />
 </head>
 
 <body>
-    <h1>Hello, world!</h1>
 
-        <div class="small-2 columns">
-            <form>
-                <div class="row">
-                  <div class="large-12 columns">
-                    <label>Input Label
-                      <input type="text" placeholder="large-12.columns" />
-                    </label>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="large-4 columns">
-                    <label>Input Label
-                      <input type="text" placeholder="large-4.columns" />
-                    </label>
-                  </div>
-                  <div class="large-4 columns">
-                    <label>Input Label
-                      <input type="text" placeholder="large-4.columns" />
-                    </label>
-                  </div>
-                  <div class="large-4 columns">
-                    <div class="row collapse">
-                      <label>Input Label</label>
-                      <div class="small-9 columns">
-                        <input type="text" placeholder="small-9.columns" />
-                      </div>
-                      <div class="small-3 columns">
-                        <span class="postfix">.com</span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="large-12 columns">
-                    <label>Select Box
-                      <select>
-                        <option value="husker">Husker</option>
-                        <option value="starbuck">Starbuck</option>
-                        <option value="hotdog">Hot Dog</option>
-                        <option value="apollo">Apollo</option>
-                      </select>
-                    </label>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="large-6 columns">
-                    <label>Choose Your Favorite</label>
-                    <input type="radio" name="pokemon" value="Red" id="pokemonRed"><label for="pokemonRed">Red</label>
-                    <input type="radio" name="pokemon" value="Blue" id="pokemonBlue"><label for="pokemonBlue">Blue</label>
-                  </div>
-                  <div class="large-6 columns">
-                    <label>Check these out</label>
-                    <input id="checkbox1" type="checkbox"><label for="checkbox1">Checkbox 1</label>
-                    <input id="checkbox2" type="checkbox"><label for="checkbox2">Checkbox 2</label>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="large-12 columns">
-                    <label>Textarea Label
-                      <textarea placeholder="small-12.columns"></textarea>
-                    </label>
-                  </div>
-                </div>
-              </form>
-        </div>
-                <div class="small-4 large-4 columns">...</div>
-                <div class="small-6 large-4 columns">...</div>
-      </div>    
 
     <!-- Compressed JavaScript -->
-    <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/js/foundation.min.js"
-        integrity="sha256-pRF3zifJRA9jXGv++b06qwtSqX1byFQOLjqa2PTEb2o=" crossorigin="anonymous"></script>
-
+    <script type="text/javascript" src="./css/materialize/js/materialize.js"></script>
+    <!--<script async
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBs094KFbn1VNf7g8NEjgVeCZapYcbfT08&callback=initMap">
+    </script>-->
+    <script src="js/script.js"></script>
 </body>
 
 </html>
