--- a/Main/index.html
+++ b/Main/index.html
@@ -5,21 +5,87 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Take A Hike</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="./css/materialize/css/materialize.css"  media="screen,projection"/>
-    <link rel ="stylesheet" href="css/style.css" />
+    <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
+
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href="./css/materialize/css/materialize.css" media="screen,projection" />
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
+    <!-- Modal -->
+    <button id="myBtn">Open Modal</button>
+    <div id="myModal" class="modal">
+        <a class="waves-effect waves-light btn modal-trigger modal-close" href="#modal1">Modal</a>
+
+        <!-- Modal Structure -->
+        <div id="modal1" class="modal">
+            <div class="modal-content">
+                <h4>Modal Header</h4>
+                <p>A bunch of text</p>
+            </div>
+            <div class="modal-footer">
+                <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+            </div>
+        </div>
+        <section>
+            <div id="modalHead" class="row"> Enter your desired hiking location
+                <div class="row">
+                    <form class="col s12">
+                        <div class="row">
+                            <div class="input-field col s6">
+                                <input placeholder="Please enter City and State" id="cityName" type="text" class="validate "></inpout>
+                                <label for="location">City and State</label>
+                                <div class="form-floating">
+                                    <!-- floating Selector for choose your level-->
+                                    <select class="form-select" id="floatingSelect" aria-label="Floating label select example">
+    <option selected>Choose your level</option>
+    <option value="1">Easy- 1-5 miles with easy terrain and little elevation gain</option>
+    <option value="2">Moderate 5-10 miles with moderate terrain and some elevation change</option>
+    <option value="3">Difficult 10-20 miles</option>
+        <option value="3">Challenging 20-30 miles</option>
+  </select>
+                                    <label for="floatingSelect"> Max Difficulty Level</label>
+                                </div>
+
+                                <div class="form-floating">
+                                    <!-- floating Selector for Choose your length-->
+                                    <select class="form-select" id="floatingSelect" aria-label="Floating label select example">
+    <option selected>Choose your length</option>
+    <option value="1">1-5 miles</option>
+    <option value="2">5-10 miles</option>
+    <option value="3">10-20 miles</option>
+        <option value="3">20-30 miles</option>
+  </select>
+                                    <label for="floatingSelect"> Max Trail Length</label>
+                                </div>
+                            </div>
+                        </div>
+                        <button>Take a hike</button>
+                </div>
 
 
-    <!-- Compressed JavaScript -->
-    <script type="text/javascript" src="./css/materialize/js/materialize.js"></script>
-    <!--<script async
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBs094KFbn1VNf7g8NEjgVeCZapYcbfT08&callback=initMap">
-    </script>-->
-    <script src="js/script.js"></script>
+
+
+
+
+
+
+
+
+
+                <!-- Compressed JavaScript -->
+                <script type="text/javascript" src="./css/materialize/js/materialize.js"></script>
+                <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBs094KFbn1VNf7g8NEjgVeCZapYcbfT08&callback=initMap">
+                </script>
+                <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
+                <script type="text/javascript" src="js/materialize.min.js">
+                </script>
+                <script src="js/script.js"></script>
 </body>
 
 </html>
