--- a/Main/index.html
+++ b/Main/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Take A Hike</title>
 
+  <!-- Favicon -->
   <link rel="shortcut icon" type="image/jpg" href="./Assets/images/mountain.png"/>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!--Import materialize.css-->
@@ -20,13 +21,12 @@
   <nav>
     <div class="nav-wrapper">
       <a href="index.html" class="brand-logo">
-        <img class=appLogo src="tbd" alt="take a hike logo">
+        <img class="appLogo" src="" alt="take a hike logo">
       </a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
       </ul>
     </div>
   </nav>
-
 
   <!-- Jumbotron/Hero -->
 <div class = "col s12">
@@ -34,15 +34,16 @@
         <img class="hero responsive-img" src="Assets/images/heroimage.jpeg">
         <!-- Modal Trigger -->
         <div class="center buttons-wrapper">
-            <button href="#demo-modal" class="btn-large waves-effect waves-light brown lighten-3 modal-trigger">Take a
-              Hike</button>
+            <button href="#demo-modal" id="hero-button"class="btn-large waves-effect brown darken-3 z-index 2 modal-trigger">Take a Hike</button>
         </div>
 
         <!-- Modal Structure -->
-        <div id="demo-modal" class="modal">
+        <div id="demo-modal" class="modal modal-size">
             <div class="modal-content">
               <div id="modal-head" class="row"> 
-                <h5> Enter your desired hiking location </h5>
+                <h2>We're thr<span class="sage-text">hill</span>ed to see you!</h2>
+                <p>Thanks for choosing to take your hike with us! Please enter your information below to receive personalized information regarding your desired hiking location and the local weather for the date of your choosing.</p>
+                <h5> Enter your desired hiking location: </h5>
               </div>
               <div class="row">
                   <form class="col s12">
@@ -50,50 +51,22 @@
                           <input id="city-and-state" type="text" class="validate"></input>
                           <label for="location">City and State </label>
                       </div>
-                      <div class="input-field col s6">
-                        <!-- Choose your desired difficulty-->
-                          <select class="form-select">
-                            <option value="" disabled selected>Choose your level</option>
-                            <option value="1">Easy - 1-5 miles with easy terrain and little elevation gain</option>
-                            <option value="2">Moderate - 5-10 miles with moderate terrain and some elevation change</option>
-                            <option value="3">Difficult - 10-20 miles</option>
-                            <option value="4">Challenging - 20-30 miles</option>
-                          </select>
-                          <label for="floatingSelect"> Max Difficulty Level</label>
+                      <div class="col s6">
+                        <!-- Choose the day you'd like to hike -->
+                        <input type="text" class="datepicker custom-datepicker" placeholder="Select the first day of your hike">
                       </div>
-
-                      <div class="input-field col s6">
-                        <!-- Choose your desired hike length -->
-                          <select class="form-select">
-                            <option selected>Choose your length</option>
-                            <option value="1">1-5 miles</option>
-                            <option value="2">5-10 miles</option>
-                            <option value="3">10-20 miles</option>
-                            <option value="3">20-30 miles</option>
-                          </select>
-                          <label for="floatingSelect"> Max Trail Length</label>
-                      </div>
+                  </form>
               </div>
-              <a href="searchresults.html"><button class="modal-button waves-effect waves-light btn">Submit</button></a>
+              <a href="searchresults.html"><button class="submit-btn modal-button waves-effect btn">Submit</button></a>
             </div>
         </div>
     </section>
 </div>
-    <section>
-               </div>
-                      </div>
-                    </div>
-                    <button>Submit</button>
-                </div>
-              </div>
-            </div>
-          </div>
-    </section>
 
-
-        <div class="container row">
+    <section id="app-info" class="container">
+        <div class="row">
           <img class="aboutImg col s6 z-depth" src="Assets/images/frontpageimage.jpeg">
-          <h5>About</h5>
+          <h4>About</h4>
           <p>
             "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore
@@ -109,13 +82,11 @@
         </div>
     </section>
 
-  </section>
-
         <footer class="page-footer z-depth-2">
           <div class="container">
             <div class="row">
               <div class="col s12">
-                <h5 class="white-text center">Developed By:</h5>
+                <h5 class="white-text center">DEVELOPED BY</h5>
                 <div class="col s4">
                   <h6 class="center gray-text" id="name">Faith Green</h6>
                   <a href="https://github.com/faithelizagreen">
@@ -146,7 +117,8 @@
         <!--<script async
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBs094KFbn1VNf7g8NEjgVeCZapYcbfT08&callback=initMap">
     </script>-->
-        <script src="js/script.js"></script>
+        <script src="./js/script.js"></script>
+        <script src="./js/resultsscript.js"></script>
 </body>
 
 </html>
