Worked on map javascript and local storage.

--- a/Main/index.html
+++ b/Main/index.html
@@ -14,13 +14,13 @@
   <link rel="stylesheet" href="css/style.css" />
 </head>
 
-<body>
+<body id="index">
 
   <!-- Navbar -->
   <nav>
     <div class="nav-wrapper">
       <a href="index.html" class="brand-logo">
-        <img class=appLogo src="tbd" alt="take a hike logo">
+        <img class=appLogo src="" alt="take a hike logo">
       </a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
       </ul>
@@ -74,21 +74,11 @@
                           <label for="floatingSelect"> Max Trail Length</label>
                       </div>
               </div>
-              <a href="searchresults.html"><button class="modal-button waves-effect waves-light btn">Submit</button></a>
+              <a href="searchresults.html"><button id="submit-button" class="modal-button waves-effect waves-light btn">Submit</button></a>
             </div>
         </div>
     </section>
 </div>
-    <section>
-               </div>
-                      </div>
-                    </div>
-                    <button>Submit</button>
-                </div>
-              </div>
-            </div>
-          </div>
-    </section>
 
 
         <div class="container row">
@@ -147,6 +137,7 @@
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBs094KFbn1VNf7g8NEjgVeCZapYcbfT08&callback=initMap">
     </script>-->
         <script src="js/script.js"></script>
+        <script src="js/map.js"></script>
 </body>
 
 </html>
