--- a/Main/searchresults.html
+++ b/Main/searchresults.html
@@ -11,36 +11,19 @@
     <link rel ="stylesheet" href="css/style.css" />
 </head>
 
-<body>
+<body id="searchresults">
     <!-- Navigation -->
     <nav>
-        <div class="nav-wrapper green lighten-3">
+        <div class="nav-wrapper">
           <a href="#" class="brand-logo">Logo</a>
         </div>
     </nav>
-    <div class="container col s12">
+
+    <div class="container">
         <section id="results" class="row">
             <div class="col s4">
                 <div id="search-results">
                     <h3>Search Results</h3>
-                </div>
-                <div class="card small hoverable">
-                  <div class="card-image">
-                    <img src="https://www.arborday.org/images/hero/medium/hero-pine-forest-morning-light.jpg">
-                  </div>
-                  <div class="card-content">
-                    <span class="card-title">Trail Name</span>
-                    <p>Trail Location / Address </p>
-                  </div>
-                </div>
-                <div class="card small hoverable">
-                    <div class="card-image">
-                    <img src="https://www.arborday.org/images/hero/medium/hero-pine-forest-morning-light.jpg">
-                    </div>
-                    <div class="card-content">
-                    <span class="card-title">Trail Name</span>
-                    <p>Trail Location / Address</p>
-                    </div>
                 </div>
                 <div id="previous-search">
                     <h5 class="section">Previous Searches</h5>
@@ -119,7 +102,7 @@
     </section>
     
     <!-- Footer -->
-    <footer class="page-footer green lighten-3 z-depth-2">
+    <footer class="page-footer z-depth-2">
         <div class="container">
           <div class="row">
             <div class="col l12 s12">
@@ -143,9 +126,10 @@
     <!-- Compressed JavaScript -->
     <script type="text/javascript" src="./css/materialize/js/materialize.js"></script>
     <script async
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBs094KFbn1VNf7g8NEjgVeCZapYcbfT08&callback=initMap">
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBs094KFbn1VNf7g8NEjgVeCZapYcbfT08&libraries=places">
     </script>
-    <script src="js/script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="js/map.js"></script>
 </body>
 
 </html>
