Rendered place details and additional styling.

--- a/Main/index.html
+++ b/Main/index.html
@@ -17,19 +17,23 @@
 <body id="index">
 
   <!-- Navbar -->
-  <nav>
-    <div class="nav-wrapper">
-      <a href="index.html" class="brand-logo">
-        <img class="appLogo" src="" alt="take a hike logo">
-      </a>
-      <ul id="nav-mobile" class="right hide-on-med-and-down">
-      </ul>
-    </div>
-  </nav>
+  <div class="navbar-fixed">
+		<nav>
+			<div>
+				<div class="nav-wrapper">
+					<a href="#Main" class="logo">
+					<img src="./Assets/images/logo4.png" alt="take a hike logo">
+          </a>
+          <ul id="nav-mobile" class="right hide-on-med-and-down">
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </div>
 
   <!-- Jumbotron/Hero -->
   <div class="col s12">
-    <section class="jumbotron">
+    <section id=jumbotron" class="jumbotron">
       <img class="hero responsive-img" src="Assets/images/heroimage.jpeg">
       <!-- Modal Trigger -->
       <div class="center buttons-wrapper">
